# jigsaw-toxic-competition

./: .gitignore  EDA.ipynb  README.md  data_preprocessing_2nd.ipynb  eda_2nd.ipynb  minio_client.py  preprocessing.ipynb  pyproject.toml  requirements.txt
data/: EDA.ipynb  README.md  dev.csv  preprocessing.ipynb  train.csv
data/1st/: README.md  dev_pp.csv  train_pp.csv
data/2nd/: README.md  dev.csv  jigsaw_unintended_preprocessing.csv  train_pp.csv
data/4th/: README.md
data/ruddit/: README.md  dev.csv  ruddit.csv  train_pp.csv
experiments/: BERT_regression.ipynb  bert_predict.ipynb  bert_test.ipynb  bert_test.py  bert_test_parallel.py  bert_train.py  br.py  data.py  electra_train.py  model.py  sklearn_bert_featurizer.py  sklearn_test.py  tfidf-char-bertemb-ridge.py  tfidf-char-berttok-ridge-stacking.py  tfidf-char-berttok-ridgeCV.py  tfidf-char-gbr-lr-0.01.py  tfidf-char-gbr-maxdepth-1.py  tfidf-char-gbr.py  tfidf-char-svr-epsilon0.2.py  tfidf-char-word-svr.py  tfidf_regression.ipynb  utils.py  validate_and_test.py
