[tool.poetry]
name = "jigsaw-toxic-competition"
version = "0.1.0"
description = "The packages for jigsaw toxic competition"
authors = ["Stuart Kim <liger8268@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.3"
numpy = "1.20.2"
pandas = "1.2.4"
matplotlib = "3.4.1"
minio = "7.1.0"
ipykernel = "^6.6.0"
jupyter = "^1.0.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
